syntax = "proto3";

option csharp_namespace = "GatewayService.Protos";

package gatewayservice;

service UserServiceProto {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc GetUserById (UserIdRequest) returns (LoginResponse);
  rpc GetUserByEmail (EmailRequest) returns (LoginResponse);
  rpc GetUserPermissions (UserIdRequest) returns (UserPermissionsResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string roleId = 4;
}

message LogoutRequest {
  string userId = 1;
  string refreshToken = 2;
}

message LoginResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message RegisterResponse {
  string id = 1;
}

message LogoutResponse {
  bool success = 1;
}

message EmailRequest {
  string email = 1;
}

message UserIdRequest {
  string userId = 1;
}

message UserPermissionsResponse {
  repeated Permission permissions = 1;
}

message Permission {
  string id = 1;
  string permissionName = 2;
}
